# FINALPROJECT

./: .gitignore  Game Design Document_DRAFT.docx  LICENSE  Proposal_DRAFT_AFLIGHT.docx  README.md  consent_form_template.docx
Implementation/AdvancedOgreFramework/: CMakeLists.txt  License.txt  ReadMe.txt
Implementation/AdvancedOgreFramework/AdvancedOgreFramework/: AdvancedOgreFramework.cpp  AdvancedOgreFramework.hpp  AppState.hpp  AppStateManager.cpp  AppStateManager.hpp  DemoApp.cpp  GameState.cpp  GameState.hpp  MenuState.cpp  MenuState.hpp  PauseState.cpp  main.cpp
Implementation/AdvancedOgreFramework/msvc/: AdvancedOgreFramework.2010.sln  AdvancedOgreFramework.2010.vcxproj  AdvancedOgreFramework.2012.sln  AdvancedOgreFramework.2012.vcxproj
Implementation/SpaceGame/: OGRE.props  SpaceGame.sln
Implementation/SpaceGame/Media/materials/programs/: CubeShader.cg
Implementation/SpaceGame/Media/materials/scripts/: CubeShader.material  Examples.material  Skybox.material  oculus.material
Implementation/SpaceGame/Media/models/: cockpit.mesh  cockpit2.mesh
Implementation/SpaceGame/Media/particle/: SpaceDust.particle  Sun.particle
Implementation/SpaceGame/SpaceGame/: Celestial.cpp  Celestial.h  ClassDiagram.cd  Enemy.cpp  Enemy.h  Engine.cpp  Engine.h  EngineState.h  EngineStateManager.cpp  EngineStateManager.h  Game.cpp  Game.h  GameEntity.cpp  GameEntity.h  GameState.cpp  GameState.h  MenuState.cpp  MenuState.h  MoveableObjMotionState.cpp  MoveableObjMotionState.h  MoveableObject.cpp  MoveableObject.h  Oculus.cpp  Oculus.h  PauseState (Alex-PC's conflicted copy 2013-11-18).cpp  PauseState (Alex-PC's conflicted copy 2013-11-18).h  PauseState.cpp  PauseState.h  Physics.cpp  Physics.h  Player.h  PlayerShip.cpp  PlayerShip.h  Projectile.cpp  Projectile.h  SpaceGame.vcxproj  SpaceGame.vcxproj.filters  Spacecraft.cpp  Spacecraft.h  main.cpp
Implementation/SpaceGame/SpaceGame/Media/materials/scripts/: cockpit3.material  enemyShip1.material
Implementation/SpaceGame/SpaceGame/Media/models/: cockpit3.mesh
Initial Research/MinimalOculus/: MinimalOculus.sln
Interim Report/: GDDv1.docx  InterimReport_DRAFT_AFlight_77525.docx  InterimReport_DRAFT_v1_AFlight_77525.docx  InterimReport_DRAFT_v2_AFlight_77525.docx  InterimReport_FINAL_AFlight_77525.docx  UMLBITS.zargo
Proposal/: Game Design Document_DRAFT.docx  Projects_Gantt_Chart_v1.0_AFLIGHT.xlsx  Proposal_DRAFT_AFLIGHT.docx  Proposal_v1_AFLIGHT.docx
Proposal/Initial Research/MinimalOculus/MinimalOculus/: Main.cpp  MinimalOculus.vcxproj
Proposal/Initial Research/MinimalOculus/MinimalOculus/Debug/: CL.read.1.tlog  CL.write.1.tlog  MinimalOculus.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
Proposal/Initial Research/MinimalOculus/MinimalOculus/Release/: CL.read.1.tlog  CL.write.1.tlog  MinimalOculus.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Weekly Logs/: Week-1.docx  Week-2.docx
